demos/single-nodejs-app/add-ons/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: single-nodejs-app-service 
spec:
  selector: 
    app.kubernetes.io/instance: single-nodejs-app
  ports:
  - port: 8080
    targetPort: 8080
